2003-07-12  NAKAJIMA Mikio  <minakaji@namazu.org>

	* skk-study.el: Move from experimental directory.
	(skk-kakutei-initialize): Simplified it by using `ring-elements'.
	(skk-study-search-times): Change its default value to 5.
	(skk-study-max-distance): New user variable.
	(skk-study-update): Bug fixed.
	Not to study henkan relationship when (i) buffer was changed since
	last henkan, (ii) distance from last henkan point was negative or
	(iii) such distance is longer than `skk-study-max-distance'.

	* skk.el (skk-kakutei-initialize): Store buffer and point (marker)
	data of last henkan.

2003-07-11  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-study.el (skk-kakutei-initialize): Bug fixed.
	(skk-study-update): Do not add/update data to `skk-study-alist'
	when KAKUTEI-WORD is equal to car of `skk-henkan-list'.
	(skk-study-save): Modify message string slightly.

2003-07-10  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-study.el (skk-search-end-function): Declared
	with defvar.
	(skk-update-end-function): Ditto.

2003-07-07  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-study.el (skk-kakutei-initialize): Bug fixed.

2003-07-06  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-hint.el (skk-hint-limit): Use `aref' instead of
	`skk-str-ref'.
	(skk-hint-member): Ditto.
	* experimental/skk-study.el (skk-study-check-alist-format-1):
	Ditto.
	(skk-kakutei-initialize): Do not add DATA to `skk-study-data-ring'
	when KAKUTEI-WORD is equal to car of `skk-henkan-list'.
	(skk-study-save): Bug fixed.
	(skk-study-sort-saving): Change its default value to nil.
	(skk-study-associates-number): Change its default value to 5.

	* experimental/rdbms/skk-rdbms.el (skk-rdbms-sahen-search-1):
	Ditto.
	* ptexinfmt.el: Sync up with the file in emacs-w3m 1.3.

	* Makefile (VERSION): Change 12.1.1rc1 to 12.2.0rc1.
	* skk-version.el (skk-version): Bump to 12.2.0 (Sone).

2003-07-05  NAKAJIMA Mikio  <minakaji@namazu.org>
